--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "conversordemoedabase",
-    "slug": "conversordemoedabase",
+    "name": "Conversor de  Moedas",
+    "slug": "conversordemoedas",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -19,8 +19,9 @@
     "ios": {
       "supportsTablet": true
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "android": {
+      "package": "com.lenzsoft.conversordemoedas",
+      "versionCode": 1
     }
   }
 }
